deploy/podinfo-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mighty-fine-fe
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: glob:*
    flux.weave.works/automated: 'true'
    flux.weave.works/tag.mighty-fine-fe: glob:v4-subscription-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mighty-fine-fe
  template:
    metadata:
      labels:
        app: mighty-fine-fe
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: mighty-fine-fe
        image: quay.io/brice/metrics-demo:master
        ports:
        - containerPort: 3000
