deploy/mighty-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: mighty-fine-fe
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: mighty-fine-fe
          servicePort: http
        path: /mighty-fine
status:
  loadBalancer: {}
