deploy/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  creationTimestamp: null
  name: might-fine-fe
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: might-fine-fe
          servicePort: http
        path: /mighty-fine
status:
  loadBalancer: {}
